--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Advait Thakur",
   "license": "ISC",
   "dependencies": {
+    "@google-cloud/cloud-sql-connector": "^1.2.4",
     "autoprefixer": "^10.4.8",
     "dotenv": "^16.4.5",
     "ejs": "^3.1.9",
@@ -16,6 +17,7 @@
     "express-session": "^1.17.3",
     "express-validator": "^7.0.1",
     "firebase-admin": "^12.0.0",
+    "knex": "^3.1.0",
     "mysql2": "^3.9.0",
     "node-cron": "^3.0.3",
     "nodemailer": "^6.9.8",
