--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@google-cloud/cloud-sql-connector": "^1.2.4",
     "autoprefixer": "^10.4.8",
+    "crypto": "^1.0.1",
     "dotenv": "^16.4.5",
     "ejs": "^3.1.9",
     "express": "^4.19.2",
@@ -27,7 +28,7 @@
   },
   "devDependencies": {
     "browser-sync": "^3.0.2",
-    "gulp": "^4.0.2",
+    "gulp": "^5.0.0",
     "gulp-sass": "^5.1.0",
     "sass": "^1.54.4"
   }
