--- a/package.json
+++ b/package.json
@@ -18,10 +18,13 @@
     "express-session": "^1.17.3",
     "express-validator": "^7.0.1",
     "firebase-admin": "^12.0.0",
+    "googleapis": "^140.0.1",
+    "handlebars": "^4.7.8",
     "knex": "^3.1.0",
     "mysql2": "^3.9.8",
     "node-cron": "^3.0.3",
-    "nodemailer": "^6.9.8",
+    "nodemailer": "^6.9.14",
+    "open": "^10.1.0",
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
     "passport-local": "^1.0.0"
