--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
     "dotenv": "^16.4.5",
     "ejs": "^3.1.10",
     "express": "^4.19.2",
-    "express-session": "^1.17.3",
-    "express-validator": "^7.0.1",
+    "express-rate-limit": "^7.4.0",
+    "express-session": "^1.18.0",
+    "express-validator": "^7.1.0",
     "firebase-admin": "^12.0.0",
     "googleapis": "^140.0.1",
     "handlebars": "^4.7.8",
+    "helmet": "^7.1.0",
     "knex": "^3.1.0",
     "mysql2": "^3.9.8",
     "node-cron": "^3.0.3",
@@ -27,7 +29,8 @@
     "open": "^10.1.0",
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "winston": "^3.13.1"
   },
   "devDependencies": {
     "browser-sync": "^3.0.2",
