Add or update the Azure App Service build and deployment workflow config

--- a/.github/workflows/main_oet-oehm.yml
+++ b/.github/workflows/main_oet-oehm.yml
@@ -29,21 +29,15 @@ jobs:
           npm run build --if-present
           npm run test --if-present
 
-      - name: Zip artifact for deployment
-        run: zip release.zip ./* -r
-
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
         with:
           name: node-app
-          path: release.zip
+          path: .
 
   deploy:
     runs-on: ubuntu-latest
     needs: build
-    environment:
-      name: 'Production'
-      url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
     permissions:
       id-token: write #This is required for requesting the JWT
       contents: read #This is required for actions/checkout
@@ -53,16 +47,13 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           name: node-app
-
-      - name: Unzip artifact for deployment
-        run: unzip release.zip
       
       - name: Login to Azure
         uses: azure/login@v2
         with:
-          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_3252A3FD5BFC4912B813B85E2911D2A2 }}
-          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_56CFEF54C96F49A299DB6B182AD913E9 }}
-          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_D0C9BBFA3BBC478EAF7A58DD5937DC00 }}
+          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_C4CB21EECB5F49ABBC19BB5AD5B30E65 }}
+          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_7F59E7DFFC894F13BD1F735AEFD4E431 }}
+          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_908FEA9CA41A4B5FB5F108AB7F5C4C75 }}
 
       - name: 'Deploy to Azure Web App'
         id: deploy-to-webapp
